--- a/src/ABC/ABC.Data/ABC.Data.csproj
+++ b/src/ABC/ABC.Data/ABC.Data.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
