--- a/src/ABC/ABC.Data/ABC.Data.nuspec
+++ b/src/ABC/ABC.Data/ABC.Data.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>GenericRepoAndUnitOfWork</id>
-    <version>$version$</version>
+    <version>1.0.0.2</version>
     <title>$title$</title>
     <authors>Mustafa Saeed</authors>
     <owners>Mustafa Saeed</owners>
